--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       content="Sudoku, online Sudoku, free Sudoku, Sudoku puzzle, number puzzle, brain game, logic puzzle, Sudoku web app, play Sudoku online, daily Sudoku, easy Sudoku, expert Sudoku"
     />
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
     <title>Sudoku</title>
   </head>
   <body>
